static/all.css
/* ... */
.highlight .g {
    color: #fff
}

.highlight .k {
    color: #ff8400
}

.highlight .l {
    color: #fff
}

.highlight .n {
    color: #fff
}

.highlight .o {
    color: #e0882f
}

.highlight .x {
    color: #fff
}

.highlight .p {
    color: #999
}

.highlight .cm {
    color: #b729d9;
    font-style: italic
}

.highlight .cp {
    color: #a0a0a0
}

.highlight .c1 {
    color: #b729d9;
    font-style: italic
}

.highlight .cs {
    color: #b729d9;
    font-style: italic
}

.highlight .gd {
    color: #a40000
}

.highlight .ge {
    color: #fff;
    font-style: italic
}

.highlight .gr {
    color: #ef2929
}

.highlight .gh {
    color: #000080
}

.highlight .gi {
    color: #00a000
}

.highlight .go {
    color: #808080
}

.highlight .gp {
    color: #745334
}

.highlight .gs {
    color: #fff;
    font-weight: bold
}

.highlight .gu {
    color: #800080;
    font-weight: bold
}

.highlight .gt {
    color: #a40000;
    font-weight: bold
}

.highlight .kc {
    color: #ff8400
}

.highlight .kd {
    color: #ff8400
}

.highlight .kn {
    color: #ff8400
}

.highlight .kp {
    color: #ff8400
}

.highlight .kr {
    color: #ff8400
}

.highlight .kt {
    color: #ff8400
}

.highlight .ld {
    color: #fff
}

.highlight .m {
    color: #1299da
}

.highlight .s {
    color: #56db3a
}

.highlight .na {
    color: #fff
}

.highlight .nb {
    color: #fff
}

.highlight .nc {
    color: #fff
}

.highlight .no {
    color: #fff
}

.highlight .nd {
    color: #808080
}

.highlight .ni {
    color: #ce5c00
}

.highlight .ne {
    color: #c00
}

.highlight .nf {
    color: #fff
}

.highlight .nl {
    color: #f57900
}

.highlight .nn {
    color: #fff
}

.highlight .nx {
    color: #fff
}

.highlight .py {
    color: #fff
}

.highlight .nt {
    color: #ccc
}

.highlight .nv {
    color: #fff
}

.highlight .ow {
    color: #e0882f
}

.highlight .w {
    color: #f8f8f8;
    text-decoration: underline
}

.highlight .mf {
    color: #1299da
}

.highlight .mh {
    color: #1299da
}

.highlight .mi {
    color: #1299da
}

.highlight .mo {
    color: #1299da
}

.highlight .sb {
    color: #56db3a
}

.highlight .sc {
    color: #56db3a
}

.highlight .sd {
    color: #b729d9;
    font-style: italic
}

.highlight .s2 {
    color: #56db3a
}

.highlight .se {
    color: #56db3a
}

.highlight .sh {
    color: #56db3a
}

.highlight .si {
    color: #56db3a
}

.highlight .sx {
    color: #56db3a
}

.highlight .sr {
    color: #56db3a
}

.highlight .s1 {
    color: #56db3a
}

.highlight .ss {
    color: #56db3a
}

.highlight .bp {
    color: #3465a4
}

.highlight .vc {
    color: #fff
}

.highlight .vg {
    color: #fff
}

.highlight .vi {
    color: #fff
}

.highlight .il {
    color: #1299da
}

.doc_page li {
    color: #444;
    font-size: 14px;
    font-family: "Lucida Sans Unicode", "Lucida Grande", Verdana, Arial, Helvetica, sans-serif;
    margin-bottom: 13px;
    list-style-type: disc;
    margin-left: 30px
}

.doc_page blockquote {
    color: #444;
    font-size: 14px;
    font-family: "Lucida Sans Unicode", "Lucida Grande", Verdana, Arial, Helvetica, sans-serif;
    margin-bottom: 13px;
    padding: 20px;
    list-style-type: disc
}

pre {
    background-color: #232125;
    overflow: auto;
    line-height: 1.3em;
    color: #fff;
    font-size: 14px;
    padding: .7em
}

pre code {
    background-color: #232125
}

pre.command-line {
    background-color: #333;
    color: #eee;
    padding-bottom: 10px
}

pre.command-line code {
    background-color: #333
}

blockquote {
    padding: 20px;
    padding-top: 7px;
    background-color: #f5f5f5
}

/* Admonition styles
   ----------------------------------------------------------- */

div.admonition-wrapper {
    margin: 1.5em 0;
    padding: 10px 0 10px 10px;
    position: relative;
}

div.admonition {
    background: #f5f5f5;
    margin: 2em 0;
    min-height: 51px;
    padding: 15px 0 5px 55px;
    width: 92%;
}

div.note {
    background: url("note.png") no-repeat 10px 20px #ecf0f1;
}

div.caution, div.warning {
    background: url(caution.png) no-repeat 10px 20px #ecf0f1;
}

div.tip {
    background: url(tip.png) no-repeat 10px 20px #ecf0f1;
}

div.sidebar {
    background: url(sidebar.png) no-repeat 10px 20px #ecf0f1;
    left: 0;
    top: 0;
}

/* ------------ */

div.seealso {
    background: url(seealso.png) no-repeat scroll 0 0 transparent;
    height: 51px;
    left: 0;
    position: absolute;
    top: 0;
    width: 51px;
}

p.admonition-title {
    font-size: 1.2em;
    margin: -45px 0 0 -55px;
    position: absolute;
}

p.sidebar-title {
    margin-top: 10px;
    color: #313131;
    padding-bottom: 20px;
    font-style: italic;
    font-family: Georgia, "Times New Roman", Times, serif;
    font-size: 20px
}

.sidebar h2 {
    margin: 0;
    padding: 0
}

.navigation {
    font-family: Arial, sans-serif;
    padding: 10px 15px;
    padding-bottom: 0;
    font-size: .9em;
    text-align: center
}

.navigation a {
    text-decoration: none
}

.navigation a:hover {
    text-decoration: underline
}

.navigation .separator {
    padding: 0 10px;
    color: #333
}

#quick-tour ul.simple {
    padding: 5px 0 0 0
}

#quick-tour ul.simple li {
    margin: 0;
    margin-right: 5px;
    display: inline
}

.toc {
    margin-top: 20px
}

.toc-content {
    font-size: 13px;
    padding-left: 10px;
    background-color: #f5f5f5
}

.toc-content h2 {
    margin: 0;
    padding: 0
}

.toc-content a {
    text-decoration: none;
    color: #777
}

.toc-content a:hover {
    text-decoration: underline
}

.toc-content li {
    padding: 2px;
    list-style: disc;
    margin: 5px 0;
    margin-left: 15px
}

.toc-content li li {
    font-weight: bold
}

.toc-content li li li {
    font-weight: normal
}

.toc-content>ul>li {
    list-style: none;
    margin-left: 0
}

.toc-content>ul ul ul li {
    list-style-type: none;
    background: url(doc_thick.png) no-repeat 0 8px;
    padding-left: 10px;
    margin-left: 0
}
/* ... */

